# service_dataops_utility

./: .dockerignore  .env.schema  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  app.py  config.py  docker-compose.yaml  gunicorn_config.py  gunicorn_starter.sh  namespace.py  pyproject.toml  requirements.txt  start.py
api/: routes.py
api/api_archive/: archive.py
api/api_file_operations/: api_file_operations.py  api_file_operations_validate.py  api_message_hub.py  copy_dispatcher(deprecated).py  copy_dispatcher.py  delete_dispatcher(deprecated).py  delete_dispatcher(refactory).py  delete_dispatcher.py  dispatcher.py  validation_copy.py  validations.py
api/api_filedata_meta/: filedata_meta.py
api/api_resource_lock/: api_file_lock.py  api_r_lock.py
api/api_tags/: batch_tags_operation_v2.py  batch_tags_operations.py  tags_api.py  tags_api_v2.py
api/api_task_dispatch/: task_dispatch.py
api/api_virtual_folder/: virtual_folder_file.py  virtual_folders.py
commons/data_providers/: redis.py  redis_project_session_job.py
dependencies/: __init__.py  cache.py
kubernetes/: deployment.yaml
models/: api_archive.py  api_archive_sql.py  archive_models.py  base_models.py  file_deletion_models.py  file_ops_models.py  filemeta_models.py  resource_lock_mgr.py  resource_lock_reqres.py  tags_models.py  task_dispatch.py  upload_models.py  virtual_folder_models.py
resources/: cataloguing_manager.py  db_connection.py  dependency.py  error_handler.py  geid_shortcut.py  helpers.py  message_sender.py  redis.py  redis_project_session_job.py  utils.py
tests/: conftest.py  prepare_test.py  pytest.ini  test_api.py  test_api_file_lock_v2.py  test_api_system_tags.py  test_api_tags.py  test_archive.py  test_batch_tags_ops.py  test_virtual_folder.py
tests/api_file_operations/: test_copy_dispatcher.py  test_dispatcher.py
tests/api_resource_lock/: test_api_file_lock.py
tests/dependencies/: test_cache.py
